--- a/data.Rmd
+++ b/data.Rmd
@@ -10,9 +10,8 @@ library(readr)
 library(tidyverse)
 
 
-data <- read_csv("C:/Users/andre/Desktop/lyrics-data.csv") #Skal ændres af alle
-
-artists_data <- read_csv("C:/Users/andre/Downloads/artists-data.csv") #Same
+data_start <- read_csv("C:/Users/Simon ik mig/Downloads/lyrics-data.csv.zip") #Simon
+artists_data <- read_csv("C:/Users/Simon ik mig/Downloads/artists-data (1).csv")# Simon 
 
 ```
 
@@ -31,14 +30,110 @@ artists = artists_data %>%
 
 
 ```{r}
+glimpse(data_start)
 
-data = data %>% 
+data = data_start %>% 
   filter(Idiom == "ENGLISH") %>% 
   rename("Link" = "ALink") %>% 
   inner_join(artists, by = c("Link")) %>% 
-  distinct() %>% 
-  select(-c(Link, SLink, Songs))
+  distinct() %>%
+  mutate(name = paste(Artist, SName))%>%
+  rename(text=Lyric) %>%
+  filter(Rock==1 & Pop==1) %>%
+  select(name, text)%>%
+  distinct(name, .keep_all = T)
 
+
+data %>%
+  count(name, sort = T)
+
+```
+
+
+
+# Make labels 
+
+```{r}
+library(tidytext)
+text_tidy = data %>% unnest_tokens(word, text, token = "words")
+
+head(text_tidy)
+```
+
+```{r}
+text_tidy %<>%
+  filter(str_length(word) > 2 ) %>% 
+  group_by(word) %>%
+  ungroup() %>%
+  anti_join(stop_words, by = 'word') 
+```
+
+```{r}
+library(hunspell)
+text_tidy %>%
+  mutate(stem = hunspell_stem(word)) %>%
+  unnest(stem) %>%
+  count(stem, sort = TRUE)
+
+
+text_tidy %<>% 
+  mutate(stem = hunspell_stem(word)) %>%
+  unnest(stem) %>%
+   select(-word) %>%
+  rename(word = stem)
+
+
+
+```
+
+```{r}
+top_10000_words=text_tidy %>%
+  count(word,sort = T) %>%
+  head(10000) %>%
+  select(word)
+
+data_top_10000=top_10000_words %>%
+  left_join(text_tidy, by= c("word")) 
+
+```
+
+# Bing
+```{r}
+sentiment_bing= data_top_10000 %>%
+  inner_join(get_sentiments("bing")) %>%
+  mutate(sentiment= ifelse(sentiment == "positive", 1,0)) 
+
+sentiment_bing %<>%
+  group_by(name) %>%
+  summarise(mean= mean(sentiment))%>%
+  mutate(label= ifelse(mean>=0.5, 1,0))
+
+```
+
+# Afinn
+
+```{r}
+sentiment_afinn= data_top_10000 %>%
+  inner_join(get_sentiments("afinn")) 
+
+sentiment_afinn %<>%
+  group_by(name) %>%
+  summarise(mean= mean(value))%>%
+  mutate(label= ifelse(mean>=0, 1,0))
+
+```
+
+# Data
+
+```{r}
+data_bing= sentiment_bing %>%
+  inner_join(data)%>%
+  select(text, label, name)
+  
+
+data_afinn= sentiment_afinn %>%
+  inner_join(data)%>%
+  select(text, label, name)
 ```
 
 
