--- a/nn.Rmd
+++ b/nn.Rmd
@@ -166,6 +166,7 @@ x_test_data= test_data %>% pull(text)
 y_test_data= test_data %>% pull(y)
 ```
 
+Now it is time to load keras and make some adjustments to the data. The data are tweets so a lot of special characters are removed like # and @'s. And then we tokenize our data as we know from basic machine learning to get like a bag of words from our song lyrics and lastly we create a list where every song has a vector which includes the words as a numerical character if the words contained in the tweets are among the 100000 most used words in the dataset.
 ```{r}
 library(keras)
 
@@ -210,11 +211,11 @@ x_test <- sequences_test %>% vectorize_sequences(dimension = 100000)
 
 str(x_train[1,])
 ```
-What the above has done to the data is, that every tweet now is a row and every feature/word now is a column and then if the tweets has e.g. word 1 then it would have the value 1 otherwise zero. So we basically now have a matrix of size [2365x10000] [number of tweets in training set x number of words].
+What the above has done to the data is, that every tweet now is a row and every feature/word now is a column and then if the tweets has e.g. word 1 then it would have the value 1 otherwise zero. So we basically now have a matrix of size [2488x100000] [number of song in training set x number of words].
 
 ###The model
 
-The above data is then used in our baseline model with an input shape of 10000 because that is the size of our input. Then we run it through two dense "relu" layers which is normal procedure for a baseline model. Lastly we have a dense layer with the output which is of unit 1 and is a "sigmoid" layer which means it returns a value between 0 and 1 as we want, as we wanna figure out if a tweet is fake or real.
+The above data is then used in our baseline model with an input shape of 100000 because that is the size of our input. Then we run it through two dense "relu" layers which is normal procedure for a baseline model. Lastly we have a dense layer with the output which is of unit 1 and is a "sigmoid" layer which means it returns a value between 0 and 1 as we want, as we wanna figure out if a tweet is fake or real.
 ```{r}
 model_keras <- keras_model_sequential()
 
@@ -226,7 +227,7 @@ model <- model_keras %>%
   layer_dense(units = 1, activation = "sigmoid")
 ```
 
-We use baseline model compiling with optimizer "adam", loss "binary" as we are dealing with a binary case and the metric we wanna maximize is accurary.
+We use baseline model compiling with optimizer "adam", loss "binary" as we are dealing with a binary case and the metric we wanna maximize is accuracy.
 ```{r}
 model %>% compile(
   optimizer = "adam",
@@ -245,7 +246,7 @@ history_ann <- model %>% fit(
   x_train,
   y_train_data,
   epochs = 10,
-  batch_size = 128,
+  batch_size = 512,
   validation_split = 0.25
 )
 ```
@@ -258,12 +259,12 @@ plot(history_ann)
 ### Padding
 In our first baseline model, we used a document-term matrix as inputs for training, with one-hot-encodings (= dummy variables) for the 10.000 most popular terms. This has a couple of disadvantages. Besides being a very large and sparse vector for every review, as a “bag-of-words”, it did not take the word-order (sequence) into account.
 
-This time, we use a different approach, therefore also need a different input data-structure. We now use pad_sequences() to create a integer tensor of shape (samples, word_indices). However, tweets vary in length, which is a problem since Keras requieres the inputs to have the same shape across the whole sample. Therefore, we use the maxlen = 100 argument, to restrict ourselves to the first 100 words in every tweet also because a tweet maximally can be 280 characters.
+This time, we use a different approach, therefore also need a different input data-structure. We now use pad_sequences() to create a integer tensor of shape (samples, word_indices). However, song vary in length, which is a problem since Keras requieres the inputs to have the same shape across the whole sample. Therefore, we use the maxlen = 300 argument, to restrict ourselves to the first 300 words in every song.
 
 The data is paded
 ```{r}
-x_train_pad <- sequences_train %>% pad_sequences(maxlen=1000)
-x_test_pad <- sequences_test %>% pad_sequences(maxlen=1000)
+x_train_pad <- sequences_train %>% pad_sequences(maxlen=300)
+x_test_pad <- sequences_test %>% pad_sequences(maxlen=300)
 
 ```
 
@@ -271,12 +272,12 @@ x_test_pad <- sequences_test %>% pad_sequences(maxlen=1000)
 ```{r}
 glimpse(x_train_pad)
 ```
-Now if the value in e.g. the first column of the first tweet is 0 it means that the first  word in the first tweet is not one of the 10000 most used words and there for our model has no integer for it. If there is an integer e.g. "386" it means that that the 386 most commonly used word is the first word in the tweet.
+Now if the value in e.g. the first column of the first tweet is 0 it means that the first  word in the first tweet is not one of the 100000 most used words and there for our model has no integer for it. If there is an integer e.g. "386" it means that that the 386 most commonly used word is the first word in the tweet.
 
 
 #### The model
 
-setting up the model we will first use a layer_embedding to compress our initial one-hot-encoding vector of length 10.000 to a “meaning-vector” (=embedding) of the lower dimensionality of 32. Then we add a layer_simple_rnn on top, and finally a layer_dense for the binary prediction of review sentiment.
+setting up the model we will first use a layer_embedding to compress our initial one-hot-encoding vector of length 10.0000 to a “meaning-vector” (=embedding) of the lower dimensionality of 32. Then we add a layer_simple_rnn on top, and finally a layer_dense for the binary prediction of review sentiment.
 ```{r}
 model_keras2 <- keras_model_sequential()
 
@@ -315,6 +316,7 @@ plot(history_rnn)
 ```
 
 # Neural Network Afinn
+Now we try with our Afinn labeled data
 
 ```{r}
 data_afinn_n= data_afinn %>%
@@ -342,6 +344,8 @@ x_test_data2= test_data2 %>% pull(text)
 y_test_data2= test_data2 %>% pull(y)
 ```
 
+
+Again we tokenize
 ```{r}
 library(keras)
 
@@ -367,13 +371,13 @@ sequences_test2 = texts_to_sequences(tokenizer_test2, x_test_data2)
 
 ### One-hot encoding
 
+One-hot encoding again to get a bag of words
 ```{r}
 x_train2 <- sequences_train2 %>% vectorize_sequences(dimension = 100000) 
 x_test2 <- sequences_test2 %>% vectorize_sequences(dimension = 100000) 
 
 str(x_train2[1,])
 ```
-What the above has done to the data is, that every tweet now is a row and every feature/word now is a column and then if the tweets has e.g. word 1 then it would have the value 1 otherwise zero. So we basically now have a matrix of size [2365x10000] [number of tweets in training set x number of words].
 
 ###The model
 
